RMS for strength

--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +65,14 @@
     "\n",
     "verbose = False  # enables more output messages which can help identify problems; will only return errors if False\n",
     "\n",
-    "excel_output = True # save results as excel files; will return CSV files if False"
+    "excel_output = True # save results as excel files; will return CSV files if False\n",
+    "\n",
+    "use_rms = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -467,9 +469,6 @@
     }
    ],
    "source": [
-    "discard_low = True\n",
-    "discard_late = True\n",
-    "\n",
     "reaction = {}\n",
     "bad_peaks = []\n",
     "\n",
@@ -506,6 +505,12 @@
     "\n",
     "            buildup = max_time - peak_start\n",
     "\n",
+    "            if use_rms:\n",
+    "                rms_value = np.sqrt(np.mean(np.square(values[indices_above_threshold])))\n",
+    "            else:\n",
+    "                rms_value = max_value  # Use max_value when RMS is not needed\n",
+    "\n",
+    "            # Conditional assignment to correct column based on use_rms\n",
     "            if max_value >= hard_threshold:\n",
     "                if peak_start >= time_threshold:\n",
     "                    toolate.append(entry)\n",
@@ -514,7 +519,7 @@
     "                            \"reactionTime\": int(peak_start),\n",
     "                            \"peakTime\": int(max_time),\n",
     "                            \"difference\": int(buildup),\n",
-    "                            \"strength\": int(max_value)\n",
+    "                            \"strength (RMS)\" if use_rms else \"strength (raw)\": int(rms_value)  # Assign correct value\n",
     "                        }\n",
     "                        if verbose: print(f\"Processed {entry}.\")\n",
     "\n",
@@ -522,7 +527,7 @@
     "                    \"reactionTime\": int(peak_start),\n",
     "                    \"peakTime\": int(max_time),\n",
     "                    \"difference\": int(buildup),\n",
-    "                    \"strength\": int(max_value)\n",
+    "                    \"strength (RMS)\" if use_rms else \"strength (raw)\": int(rms_value)  # Assign correct value\n",
     "                }\n",
     "                if verbose: print(f\"Processed {entry}.\")\n",
     "            else:\n",
@@ -532,7 +537,7 @@
     "                        \"reactionTime\": int(peak_start),\n",
     "                        \"peakTime\": int(max_time),\n",
     "                        \"difference\": int(buildup),\n",
-    "                        \"strength\": int(max_value)\n",
+    "                        \"strength (RMS)\" if use_rms else \"strength (raw)\": int(rms_value)  # Assign correct value\n",
     "                    }\n",
     "                    if verbose: print(f\"Processed {entry}.\")\n",
     "            break\n",
@@ -568,12 +573,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dictionary to store grouped data by Animal + Experiment condition (ignoring startle, rep, and run)\n",
-    "grouped_data = defaultdict(lambda: {\"reactionTime\": [], \"peakTime\": [], \"difference\": [], \"strength\": []})\n",
+    "# Initialize grouped_data with only the relevant strength column based on use_rms\n",
+    "grouped_data = defaultdict(lambda: {\n",
+    "    \"reactionTime\": [], \"peakTime\": [], \"difference\": [],\n",
+    "    \"strength (raw)\": [] if not use_rms else [],\n",
+    "    \"strength (RMS)\": [] if use_rms else []\n",
+    "})\n",
     "\n",
     "# Group entries by Animal + Experiment (removing `startleX`, `RepX`, and `RunX`)\n",
     "for entry, values in reaction.items():\n",
@@ -585,13 +594,20 @@
     "\n",
     "    group_key = f\"{animal}_{experiment}\"  # Group by animal + experiment condition\n",
     "\n",
+    "    # Dynamically set the strength key (no need to check here anymore)\n",
+    "    strength_key = \"strength (RMS)\" if use_rms else \"strength (raw)\"\n",
+    "\n",
+    "    # Add values to the corresponding groups\n",
     "    for key in values:\n",
-    "        grouped_data[group_key][key].append(values[key])\n",
+    "        if key == \"strength (raw)\" or key == \"strength (RMS)\":  # Directly append to the selected strength key\n",
+    "            grouped_data[group_key][strength_key].append(values[key])\n",
+    "        else:\n",
+    "            grouped_data[group_key][key].append(values[key])\n",
     "\n",
     "# Calculate averages for each animal's experiment condition\n",
     "average_data = {\n",
     "    group_key: {\n",
-    "        key: round(sum(val_list) / len(val_list), 2)  # Compute average and round to 2 decimals\n",
+    "        key: round(sum(val_list) / len(val_list), 2) if len(val_list) > 0 else None  # Check if list is empty\n",
     "        for key, val_list in values.items()\n",
     "    }\n",
     "    for group_key, values in grouped_data.items()\n",
@@ -600,17 +616,16 @@
     "# Print the results\n",
     "if verbose: print(f\"Created {len(average_data)} entries.\")\n",
     "for key, values in average_data.items():\n",
-    "    if verbose: print(f\"{key}: {values}\")\n"
+    "    if verbose: print(f\"{key}: {values}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install openpyxl\n",
-    "os.makedirs(output_dir, exist_ok=True) # create output directory if not already present\n",
+    "os.makedirs(output_dir, exist_ok=True)  # create output directory if not already present\n",
     "\n",
     "grouped_data = defaultdict(list)\n",
     "\n",
@@ -622,15 +637,22 @@
     "# Save each animal's data into a file\n",
     "for animal, experiments in grouped_data.items():\n",
     "    filename = f\"{animal}.xlsx\" if excel_output else f\"{animal}.csv\"\n",
-    "    file_path = os.path.join(output_dir, filename) \n",
-    "    \n",
-    "    # Ensure the \"Experiment\" column is first\n",
+    "    file_path = os.path.join(output_dir, filename)\n",
+    "\n",
+    "    # Ensure the \"experiment\" column is first\n",
     "    column_order = [\"experiment\"] + [key for key in experiments[0] if key != \"experiment\"]\n",
-    "    \n",
+    "\n",
     "    if excel_output:\n",
+    "        # Convert the list of experiments into a DataFrame\n",
     "        df = pd.DataFrame(experiments, columns=column_order)\n",
+    "        \n",
+    "        # Drop columns that are completely empty\n",
+    "        df = df.dropna(axis=1, how='all')\n",
+    "        \n",
+    "        # Save the DataFrame to Excel\n",
     "        df.to_excel(file_path, index=False)\n",
     "    else:\n",
+    "        # Write to CSV file\n",
     "        with open(file_path, mode=\"w\", newline=\"\") as file:\n",
     "            writer = csv.DictWriter(file, fieldnames=column_order)\n",
     "            writer.writeheader()\n",
