--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook takes input data from ASR-recordings in the form of an input folder with subfolders for each animal that contain their respective CSV files and outputs information regarding the average reaction of each animal to each experiment. <br>The code is annotated and a more extensive explanation is contained within `Protocol.md`. <br>The expected time it takes to run this notebook is roughly 3-4 Minutes, but this can be shorter or longer depending on your hardware."
+    "This notebook takes input data from ASR-recordings in the form of an input folder with subfolders for each animal that contain their respective CSV files and outputs information regarding the average reaction of each animal to each experiment. <br>The code is annotated and a more extensive explanation is contained within `Protocol.md`. <br>The expected time it takes to run this notebook is roughly 30 seconds per recording, but this can be shorter or longer depending on your hardware and the specifics of the recording."
    ]
   },
   {
@@ -63,21 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = \"2025\" # folder containing folder with .CSV files; subfolders are treated as animal numbers, files within them are treated as runs\n",
+    "input_dir = \"2025\" # folder containing folders with .CSV files; subfolders are treated as animal numbers, files within them are treated as runs\n",
+    "                   # change this to your own input directory\n",
     "\n",
     "output_dir = \"Results\" # folder containing final results\n",
     "\n",
-    "filename = \"Output\" # name of the output files\n",
+    "filename = \"Output\" # name of the output file; consecutive files will be numbered\n",
     "\n",
     "normalize = True # adjusts all values to be positive\n",
     "\n",
     "verbose = False  # enables more output messages which can help identify problems; will only return errors if False\n",
-    "\n",
-    "excel_output = True # save results as excel files; will return CSV files if False\n",
     "\n",
     "use_RMS = True # use RMS instead of raw strength\n",
     "\n",
@@ -87,15 +86,16 @@
     "\n",
     "example_number = 0 # index of the trial used for the example plot\n",
     "\n",
-    "thresholds = [30, 25, 20, 15] # thresholds within which a peak is seen as significant\n",
+    "thresholds = [30, 25, 20, 15] # thresholds that are used to check for peaks\n",
     "\n",
     "hard_threshold = 15 # if a peak is picked up below this, it will be counted as being too low \n",
     "                    # setting this to anything other than the lowest threshold should not be necessary unless you wish to see how many peaks\n",
     "                    # land between the lowest threshold and the hard threshold\n",
     "\n",
-    "time_threshold = 50 # if a peak happens this many miliseconds after the startle, it will be counted as being too late\n",
+    "time_threshold = 50 # if a peak happens beyond this many miliseconds after the startle, it will be counted as being too late\n",
     "\n",
-    "length = 1000 # length of the time window in which to look for peaks"
+    "length = 1000 # length of the time window for plotting in miliseconds (both before and after the startle);\n",
+    "              # needs to be 1000 for dual recordings to correct their startle times"
    ]
   },
   {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
     "\n",
     "df.to_excel(filepath, index=False)\n",
     "\n",
-    "print(f\"Saved {filepath}.\")"
+    "print(f\"Saved {filepath}\")"
    ]
   },
   {
