--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,14 +666,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved Results/Output.xlsx.\n"
+      "Saved Results/Output1.xlsx\n"
      ]
     }
    ],
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
