--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,8 @@
     "\n",
     "example_number = 34 # index of the trial used for the example plot\n",
     "\n",
-    "exclude = [\"gap_duration\", \"offset_PPI\"]"
+    "exclude = [\"gap_duration\", \"offset_PPI\"]\n",
+    "#exclude = [\"ASR_control\", \"gap_depth\", \"tone_in_noise\"]"
    ]
   },
   {
