option to toggle off peakTime and difference metrics

--- a/Analyzer.ipynb
+++ b/Analyzer.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "input_dir = \"Results\" # input directory\n",
     "\n",
-    "number = 2 # result number (subfolder name); 1: full results | 2: without gap duration and offset PPI"
+    "number = 3 # result number (subfolder name); 1: full results | 2: without gap duration and offset PPI | 3: also without peakTime and difference"
    ]
   },
   {
