--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +96,15 @@
     "\n",
     "example_number = 34 # index of the trial used for the example plot\n",
     "\n",
+    "more_data = False # also includes peakTime and difference between peakTime and reaction time in output\n",
+    "\n",
     "exclude = [\"gap_duration\", \"offset_PPI\"]\n",
     "#exclude = [\"ASR_control\", \"gap_depth\", \"tone_in_noise\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +848,7 @@
     "                        \"peakTime\": int(max_time),\n",
     "                        \"difference\": int(buildup),\n",
     "                        \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value) \n",
-    "                    }\n",
+    "                    } if more_data else {\"reactionTime\": int(peak_start), \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value)} # exclude peakTime and difference \n",
     "                    if verbose: print(f\"Processed {entry}.\")\n",
     "                else: # value outside of time threshold but within strength threshold\n",
     "                    toolate.append(entry)\n",
@@ -856,7 +858,7 @@
     "                            \"peakTime\": int(max_time),\n",
     "                            \"difference\": int(buildup),\n",
     "                            \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value) \n",
-    "                        }\n",
+    "                        } if more_data else {\"reactionTime\": int(peak_start), \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value)}\n",
     "                        if verbose: print(f\"Processed {entry}.\")\n",
     "            else: # value below strength threshold\n",
     "                toolow.append(entry)\n",
@@ -866,7 +868,7 @@
     "                        \"peakTime\": int(max_time),\n",
     "                        \"difference\": int(buildup),\n",
     "                        \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value) \n",
-    "                    }\n",
+    "                    } if more_data else {\"reactionTime\": int(peak_start), \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value)}\n",
     "                    if verbose: print(f\"Processed {entry}.\")\n",
     "\n",
     "                if peak_start >= time_threshold: # if outside of time threshold as well, append to that list too\n",
@@ -877,7 +879,7 @@
     "                            \"peakTime\": int(max_time),\n",
     "                            \"difference\": int(buildup),\n",
     "                            \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value) \n",
-    "                        }\n",
+    "                        } if more_data else {\"reactionTime\": int(peak_start), \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value)}\n",
     "                        if verbose: print(f\"Processed {entry}.\")\n",
     "\n",
     "            break\n",
@@ -941,7 +943,7 @@
     "                        \"peakTime\": int(max_time),\n",
     "                        \"difference\": int(buildup),\n",
     "                        \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value) \n",
-    "                    }\n",
+    "                    } if more_data else {\"reactionTime\": int(peak_start), \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value)}\n",
     "                    if verbose: print(f\"Processed {entry}.\")\n",
     "                else: # value outside of time threshold but within strength threshold\n",
     "                    toolate_top_10.append(entry)\n",
@@ -951,7 +953,7 @@
     "                            \"peakTime\": int(max_time),\n",
     "                            \"difference\": int(buildup),\n",
     "                            \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value) \n",
-    "                        }\n",
+    "                        } if more_data else {\"reactionTime\": int(peak_start), \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value)}\n",
     "                        if verbose: print(f\"Processed {entry}.\")\n",
     "            else: # value below strength threshold\n",
     "                toolow_top_10.append(entry)\n",
@@ -961,7 +963,7 @@
     "                        \"peakTime\": int(max_time),\n",
     "                        \"difference\": int(buildup),\n",
     "                        \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value) \n",
-    "                    }\n",
+    "                    } if more_data else {\"reactionTime\": int(peak_start), \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value)}\n",
     "                    if verbose: print(f\"Processed {entry}.\")\n",
     "\n",
     "                if peak_start >= time_threshold: # if outside of time threshold as well, append to that list too\n",
@@ -972,7 +974,7 @@
     "                            \"peakTime\": int(max_time),\n",
     "                            \"difference\": int(buildup),\n",
     "                            \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value) \n",
-    "                        }\n",
+    "                        } if more_data else {\"reactionTime\": int(peak_start), \"strength (RMS)\" if use_RMS else \"strength (raw)\": int(rms_value)}\n",
     "                        if verbose: print(f\"Processed {entry}.\")\n",
     "\n",
     "            break\n",
@@ -1001,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,6 +1012,8 @@
     "# Step 1: Group and average the data (original reaction)\n",
     "intermediate = defaultdict(lambda: {\n",
     "    \"animal\": [], \"sex\": [], \"date\": [], \"reactionTime\": [], \"peakTime\": [], \"difference\": [], \"strength\": []\n",
+    "}) if more_data else defaultdict(lambda: {\n",
+    "    \"animal\": [], \"sex\": [], \"date\": [], \"reactionTime\": [], \"strength\": []\n",
     "})\n",
     "\n",
     "for entry, values in reaction.items():\n",
@@ -1025,8 +1029,8 @@
     "    intermediate[key][\"animal\"].append(animal)\n",
     "    intermediate[key][\"date\"].append(date)\n",
     "    intermediate[key][\"reactionTime\"].append(values[\"reactionTime\"])\n",
-    "    intermediate[key][\"peakTime\"].append(values[\"peakTime\"])\n",
-    "    intermediate[key][\"difference\"].append(values[\"difference\"])\n",
+    "    if more_data: intermediate[key][\"peakTime\"].append(values[\"peakTime\"]) \n",
+    "    if more_data: intermediate[key][\"difference\"].append(values[\"difference\"])\n",
     "    \n",
     "    strength_value = values.get(\"strength (RMS)\" if use_RMS else \"strength (raw)\", None)\n",
     "    intermediate[key][\"strength\"].append(strength_value)\n",
@@ -1034,6 +1038,8 @@
     "# Step 1b: Group and average the data (reaction_top_10)\n",
     "intermediate_top_10 = defaultdict(lambda: {\n",
     "    \"animal\": [], \"sex\": [], \"date\": [], \"reactionTime\": [], \"peakTime\": [], \"difference\": [], \"strength\": []\n",
+    "}) if more_data else defaultdict(lambda: {\n",
+    "    \"animal\": [], \"sex\": [], \"date\": [], \"reactionTime\": [], \"strength\": []\n",
     "})\n",
     "\n",
     "for entry, values in reaction_top_10.items():\n",
@@ -1049,8 +1055,8 @@
     "    intermediate_top_10[key][\"animal\"].append(animal)\n",
     "    intermediate_top_10[key][\"date\"].append(date)\n",
     "    intermediate_top_10[key][\"reactionTime\"].append(values[\"reactionTime\"])\n",
-    "    intermediate_top_10[key][\"peakTime\"].append(values[\"peakTime\"])\n",
-    "    intermediate_top_10[key][\"difference\"].append(values[\"difference\"])\n",
+    "    if more_data: intermediate_top_10[key][\"peakTime\"].append(values[\"peakTime\"])\n",
+    "    if more_data: intermediate_top_10[key][\"difference\"].append(values[\"difference\"])\n",
     "    \n",
     "    strength_value = values.get(\"strength (RMS)\" if use_RMS else \"strength (raw)\", None)\n",
     "    intermediate_top_10[key][\"strength\"].append(strength_value)"
@@ -1058,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,6 +1079,13 @@
     "        \"reactionTime\": round(sum(metrics[\"reactionTime\"]) / len(metrics[\"reactionTime\"]), 2),\n",
     "        \"peakTime\": round(sum(metrics[\"peakTime\"]) / len(metrics[\"peakTime\"]), 2),\n",
     "        \"difference\": round(sum(metrics[\"difference\"]) / len(metrics[\"difference\"]), 2),\n",
+    "        \"strength\": round(sum(metrics[\"strength\"]) / len(metrics[\"strength\"]), 2)\n",
+    "    }) if more_data else averaged.append({\n",
+    "        \"animal\": animal,\n",
+    "        \"sex\": sex[animal.replace(\"Animal\", \"\")],  # get sex by animal number\n",
+    "        \"date\": date,\n",
+    "        \"experiment\": '_'.join(ast.literal_eval(experiment)),\n",
+    "        \"reactionTime\": round(sum(metrics[\"reactionTime\"]) / len(metrics[\"reactionTime\"]), 2),\n",
     "        \"strength\": round(sum(metrics[\"strength\"]) / len(metrics[\"strength\"]), 2)\n",
     "    })\n",
     "\n",
@@ -1089,12 +1102,19 @@
     "        \"peakTime\": round(sum(metrics[\"peakTime\"]) / len(metrics[\"peakTime\"]), 2),\n",
     "        \"difference\": round(sum(metrics[\"difference\"]) / len(metrics[\"difference\"]), 2),\n",
     "        \"strength\": round(sum(metrics[\"strength\"]) / len(metrics[\"strength\"]), 2)\n",
-    "    })"
+    "    }) if more_data else averaged_top_10.append({\n",
+    "        \"animal\": animal,\n",
+    "        \"sex\": sex[animal.replace(\"Animal\", \"\")],  # get sex by animal number\n",
+    "        \"date\": date,\n",
+    "        \"experiment\": '_'.join(ast.literal_eval(experiment)),\n",
+    "        \"reactionTime\": round(sum(metrics[\"reactionTime\"]) / len(metrics[\"reactionTime\"]), 2),\n",
+    "        \"strength\": round(sum(metrics[\"strength\"]) / len(metrics[\"strength\"]), 2)\n",
+    "    })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,14 +1132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved results to: Results\\2\n"
+      "Saved results to: Results\\3\n"
      ]
     }
    ],
@@ -1168,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
