--- a/Analyzer.ipynb
+++ b/Analyzer.ipynb
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "93dd8a86",
    "metadata": {},
    "outputs": [],
    "source": [
     "input_dir = \"Results\" # input directory\n",
     "\n",
-    "number = \"peakless_discarded\" # result number (subfolder name, can be an integer or string); 1: full results | 2: without gap duration and offset PPI | 3: also without peakTime and difference and with body weight normalization \n",
+    "number = \"peakless_discarded\" # results to analyze (subfolder name, can be an integer or string); 1: full results | 2: without gap duration and offset PPI | 3: also without peakTime and difference and with body weight normalization \n",
     "# 7: mult = 20, 8: 10, 9: 6, 10: 3, 11: 20 for det, 6 for RT, 12&13: 20|9 (13 without offset ASR?)"
    ]
   },
