--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@
 - ValueG or DeltaG?
 - How do we handle discarded recordings? What do we say about them / how to we write about and analyze them?
 - with 4th recording we could model age effects better
+- do the top 10 hit rates even mean anything? same with any analysis run on them?
+- why are hit rates so high? probably ok though, just seems odd
 
 - data analysis update for 3rd recording
 
