--- a/TODO
+++ b/TODO
@@ -6,17 +6,25 @@
     -> problem 3: changing between 60, 50, 40, 30 and 20 for det threshold changes amount of hits by a lot
     -> weigh FPR against miss rate empirically -> 20-35 picks up bad ones, 40 misses some valid ones -> use 40 to be safe?
 
-- do we even need peakTime and difference?
+- do we even need peakTime and difference? -> lesser strength = more time to reach it?
 - strength normalization ok? what scaling factor?
 - ValueG or DeltaG?
 - How do we handle discarded recordings? What do we say about them / how to we write about and analyze them?
 - with 4th recording we could model age effects better
 - do the top 10 hit rates even mean anything? same with any analysis run on them?
 - why are hit rates so high? probably ok though, just seems odd
-- what's the right strain?
+- what's the right strain? -> R420H (heterozygote, ours are WT (not homo or heterozygote)) CBA/J WT Jackson Lab (KCNC3 genotype)
 - what goes into the figures and tables section of the thesis?
 - what site to share raw recording data?
 - does separating results by experiment make sense? Maybe instead by sex, age, etc.
+- "The data was checked for
+spherificity using Mauchly’s test. If the assumption failed, the
+Greenhouse-Geisser correction was then applied. A value of
+p,0.05 was considered statistically significant. Furthermore, post-
+hoc tests were done with Bonferroni adjustment to compare within
+subject significance analysis."         -> is our procedure ok?        
+- why mice slow?               -> old measurements from the 80s      
 
 - data analysis update for 3rd recording
 
+- try to get background noise only while mouse stands still -> median, not average
