--- a/TODO
+++ b/TODO
@@ -24,7 +24,8 @@ p,0.05 was considered statistically significant. Furthermore, post-
 hoc tests were done with Bonferroni adjustment to compare within
 subject significance analysis."         -> is our procedure ok?        
 - why mice slow?               -> old measurements from the 80s      
+- why is peakTime so often 30
+- try to get background noise only while mouse stands still -> median, not average -> why so low?
 
-- data analysis update for 3rd recording
 
-- try to get background noise only while mouse stands still -> median, not average
+ALL OF OUR VALUES IN THE THESIS ARE WRONG BECAUSE WE DIDN'T MERGE THE DATASETS
