normality test fix

--- a/TODO
+++ b/TODO
@@ -29,3 +29,5 @@ subject significance analysis."         -> is our procedure ok?
 
 
 ALL OF OUR VALUES IN THE THESIS ARE WRONG BECAUSE WE DIDN'T MERGE THE DATASETS
+
+strength isn't normal if not fitted -> separate by sex first???
